--- a/src/CoverDotNet.Core/CoverDotNet.Core.csproj
+++ b/src/CoverDotNet.Core/CoverDotNet.Core.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mono.Cecil" Version="0.10.1" />
+    <PackageReference Include="mono.cecil" Version="0.10.1" />
+    <PackageReference Include="polly" Version="6.1.2" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    <PackageReference Include="System.Reactive" Version="4.*" />
+    <PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
