--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -6,10 +6,10 @@
     <PackageProjectUrl>https://github.com/glennawatson/coverdotnet/</PackageProjectUrl>
     <PackageIconUrl>http://f.cl.ly/items/1307401C3x2g3F2p2Z36/Logo.png</PackageIconUrl>
     <Authors>Glenn Watson</Authors>
-    <Owners>xpaulbettsx;ghuntley</Owners>
-    <PackageTags>drawing;colours;geometry;logging;unit test detection;service location;image handling;portable;xamarin;xamarin ios;xamarin mac;android;monodroid;uwp;net45</PackageTags>
-    <PackageReleaseNotes>https://github.com/reactiveui/splat/releases</PackageReleaseNotes>
-    <RepositoryUrl>https://github.com/reactiveui/splat</RepositoryUrl>
+    <Owners>glennawatson</Owners>
+    <PackageTags>code coverage;dot net</PackageTags>
+    <PackageReleaseNotes>https://github.com/glennawatson/coverdotnet/releases</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/glennawatson/coverdotnet</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)analyzers.ruleset</CodeAnalysisRuleSet>
